added header background

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
                             <div class="inner-div">
                                 <div class="profile">
                                     <div class="profile-card">
-                                        
+                                        <div class="bg-image" style="background-image:url('images/header-img.jpg'); background-size: cover;">
+                                            <!--<img src="images/profile-img.JPG" alt="Profile image" class="profile-img">-->
+                                        </div>
                                     </div>
                                 </div>
                                 <div></div>
