my-profile modified

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
                                 <div class="profile">
                                     <div class="profile-card">
                                         <div class="bg-image" style="background-image:url('images/header-img.jpg'); background-size: cover;">
-                                            <!--<img src="images/profile-img.JPG" alt="Profile image" class="profile-img">-->
+                                            <div class="my-profile">
+                                                <img src="images/profile-img.JPG" alt="Profile image" class="profile-img">
+                                                <h2 style="text-align: center; margin: 20px 0 5px 0; color: #4A4E52; font-family: Segoe UI;">Krrish Gaihre</h2>
+                                                <p style="text-align: center; font-size: 16px; color: #4A4E52; font-family: Segoe UI;">Student - B.Sc. CSIT</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
