--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Krrish Gaihre</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
     <section class="main">
@@ -18,8 +19,21 @@
                                         <div class="bg-image" style="background-image:url('images/header-img.jpg'); background-size: cover;">
                                             <div class="my-profile">
                                                 <img src="images/profile-img.JPG" alt="Profile image" class="profile-img">
-                                                <h2 style="text-align: center; margin: 20px 0 5px 0; color: #4A4E52; font-family: Segoe UI;">Krrish Gaihre</h2>
-                                                <p style="text-align: center; font-size: 16px; color: #4A4E52; font-family: Segoe UI;">Student - B.Sc. CSIT</p>
+                                                <h2 class="my-name">Krrish Gaihre</h2>
+                                                <p class="umy-name">Student - B.Sc. CSIT</p>
+                                                <div class="social-menu">
+                                                    <ul>
+                                                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                                    </ul>
+                                                </div>
+                                                <hr class="card-hr">
+                                                <p class="profile-quote">The Future Belongs To The Competent. Get Good, Get Better, Be The Best!</p>
+                                                <div class="arrow-right">
+                                                    <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
