--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                                                 <p class="umy-name">Student - B.Sc. CSIT</p>
                                                 <div class="social-menu">
                                                     <ul>
-                                                        <li><a href="#" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                                        <li><a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                                        <li><a href="#" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                                        <li><a href="#" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                                        <li><a href="https://www.facebook.com/gaihre.krishna.73/" target="blank" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                                        <li><a href="https://twitter.com/Krishna58988134" target="blank" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                                        <li><a href="https://www.linkedin.com/in/krishna-prasad-gaihre-43977b1a9/" target="blank" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                                        <li><a href="https://www.instagram.com/krrishgaihre/" target="blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                                                     </ul>
                                                 </div>
                                                 <hr class="card-hr">
@@ -38,7 +38,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div></div>
+                                <div class="container">
+                                    <div class="main-name-bg">
+                                        <div class="main-name">
+                                            <h3 class="name">Krrish Gaihre</h3>
+                                        </div>
+                                    </div>
+                                    <div class="inner-container">
+                                        <img src="images/profile-img.JPG" alt="Container Image" class="container-img">
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
