--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
                 </div>
             </div>
         </div>
+        <div class="menu">
+            <ul>
+                <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
+                <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
+                <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
