--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
                 <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
             </ul>
         </div>
+        <div class="sidebar-btn" onclick="myFunction()">
+            <div class="sidebar-btn_burger"></div>
+        </div>
+
+        <div class="sidebar-hide-show" id="sidebar">
+            <p>lhljkhkahjklhaljkhl</p>
+        </div>
     </section>
+
+    <script src="JS/main.js"></script>
 </body>
 </html>
