Home page Completed except Responsive

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                <li><a href="index.html"><span class="active"><i class="fa fa-home" aria-hidden="true"></i>Home</span></a></li>
                 <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
                 <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
                 <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
@@ -67,7 +67,38 @@
         </div>
 
         <div class="sidebar-hide-show" id="sidebar">
-            <p>lhljkhkahjklhaljkhl</p>
+            <div class="logo">
+                <img src="images/logo.jpg" alt="LOGO" class="logo-img">
+            </div>
+
+            <div class="sidebar-content">
+                <div class="about-content">
+                <h2 class="sidebar-about">About Me</h2>
+                    <p class="sidebar-about-p">Its me Krrish Gaihre, a student, a designer and a person having broad mind. 
+                        I am studying bachelor of science in Computer Science and Information Technology at Patan Multiple Campus seeking for 
+                        the opportunity to learn.</p>
+                </div>
+            </div>
+
+            <div class="sidebar-content">
+                <div class="about-content">
+                <h2 class="sidebar-about-get">Get in Touch</h2>
+                    <p class="sidebar-content-p">+9779867479831 <br>| | |<br> krrishgaihre@gmail.com</p>
+                    <div class="sidebar-social-menu">
+                        <ul>
+                            <li><a href="https://www.facebook.com/gaihre.krishna.73/" target="blank" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="https://twitter.com/Krishna58988134" target="blank" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/krishna-prasad-gaihre-43977b1a9/" target="blank" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.instagram.com/krrishgaihre/" target="blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <div class="copyright">
+                <a href="https://www.facebook.com/gaihre.krishna.73/" target="blank" class="cipyright-link"><u>Copyright &copy; all rights reserved</u></a>
+            </div>
+
         </div>
     </section>
 
