--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Krrish Gaihre</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -14,38 +15,51 @@
                     <div class="inner-2">
                         <div class="inner-3">
                             <div class="inner-div">
-                                <div class="profile">
-                                    <div class="profile-card">
-                                        <div class="bg-image" style="background-image:url('images/header-img.jpg'); background-size: cover;">
-                                            <div class="my-profile">
-                                                <img src="images/profile-img.JPG" alt="Profile image" class="profile-img">
-                                                <h2 class="my-name">Krrish Gaihre</h2>
-                                                <p class="umy-name">Student - B.Sc. CSIT</p>
-                                                <div class="social-menu">
-                                                    <ul>
-                                                        <li><a href="https://www.facebook.com/gaihre.krishna.73/" target="blank" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                                        <li><a href="https://twitter.com/Krishna58988134" target="blank" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                                        <li><a href="https://www.linkedin.com/in/krishna-prasad-gaihre-43977b1a9/" target="blank" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                                                        <li><a href="https://www.instagram.com/krrishgaihre/" target="blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                                                    </ul>
-                                                </div>
-                                                <hr class="card-hr">
-                                                <p class="profile-quote">The Future Belongs To The Competent. Get Good, Get Better, Be The Best!</p>
-                                                <div class="arrow-right">
-                                                    <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+                                <div class="inner-31">
+                                    <div class="responsive-menu">
+                                        <ul>
+                                            <li><a href="index.html"><span class="active"><i class="fa fa-home" aria-hidden="true"></i>Home</span></a></li>
+                                            <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
+                                            <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
+                                            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="inner-32">
+                                    <div class="profile">
+                                        <div class="profile-card">
+                                            <div class="bg-image" style="background-image:url('images/header-img.jpg'); background-size: cover;">
+                                                <div class="my-profile">
+                                                    <img src="images/profile-img.JPG" alt="Profile image" class="profile-img">
+                                                    <h2 class="my-name">Krrish Gaihre</h2>
+                                                    <p class="umy-name">Student - B.Sc. CSIT</p>
+                                                    <div class="social-menu">
+                                                        <ul>
+                                                            <li><a href="https://www.facebook.com/gaihre.krishna.73/" target="blank" title="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                                            <li><a href="https://twitter.com/Krishna58988134" target="blank" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                                            <li><a href="https://www.linkedin.com/in/krishna-prasad-gaihre-43977b1a9/" target="blank" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                                            <li><a href="https://www.instagram.com/krrishgaihre/" target="blank" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                                        </ul>
+                                                    </div>
+                                                    <hr class="card-hr">
+                                                    <p class="profile-quote">The Future Belongs To The Competent. Get Good, Get Better, Be The Best!</p>
+                                                    <div class="arrow-right">
+                                                        <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="container">
-                                    <div class="main-name-bg">
-                                        <div class="main-name">
-                                            <h3 class="name">Krrish Gaihre</h3>
+                                    <div class="container">
+                                        <div class="main-name-bg">
+                                            <div class="main-name">
+                                                <h3 class="name">Krrish Gaihre</h3>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div class="inner-container">
-                                        <img src="images/profile-img.JPG" alt="Container Image" class="container-img">
+                                        <div class="inner-container">
+                                            <img src="images/profile-img.JPG" alt="Container Image" class="container-img">
+                                        </div>
+                                        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                                     </div>
                                 </div>
                             </div>
