Home page responsive completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/responsive(960).css">
     <link rel="stylesheet" type="text/css" href="css/responsive(768).css">
     <link rel="stylesheet" type="text/css" href="css/responsive(667).css">
+    <link rel="stylesheet" type="text/css" href="css/responsive(568).css">
+    <link rel="stylesheet" type="text/css" href="css/responsive(414).css">
+    <link rel="stylesheet" type="text/css" href="css/responsive(350).css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -38,6 +41,11 @@
                     <li><a href="#"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
                     <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
                 </ul>
+
+                <div class="logo2">
+                    <a class="navbar-brand2" href="index.html"><span>K</span></a><a class="navbar-brand1" href="index.html">Rishna</a>
+                </div>
+                
             </div>
 
         </div>
@@ -127,7 +135,7 @@
             </div>
 
             <div class="copyright">
-                <a href="https://www.facebook.com/gaihre.krishna.73/" target="blank" class="cipyright-link"><u>Copyright &copy; all rights reserved</u></a>
+                <a href="https://www.facebook.com/gaihre.krishna.73/" target="blank" class="cipyright-link"><u>&copy; 2020 all rights reserved</u></a>
             </div>
 
          </div>
