moving background on mouse move completed

--- a/index.html
+++ b/index.html
@@ -222,7 +222,11 @@
 
     </section>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
     <script src="JS/main.js"></script>
+
+    
     
 </body>
 </html>
