--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Krishna Prasad Gaihre</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
     <link rel="stylesheet" type="text/css" href="css/responsive(960).css">
     <link rel="stylesheet" type="text/css" href="css/responsive(768).css">
     <link rel="stylesheet" type="text/css" href="css/responsive(667).css">
@@ -19,8 +20,8 @@
 
             <div class="menu">
                 <ul>
-                    <li><a href="index.html"><span class="active"><i class="fa fa-home" aria-hidden="true"></i>Home</span></a></li>
-                    <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
+                    <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                    <li><a href="about.html"><span class="active"><i class="fa fa-user" aria-hidden="true"></i>About</span></a></li>
                     <li><a href="resume.html"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</a></li>
                     <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
                     <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
@@ -37,8 +38,8 @@
 
             <div class="responsive-menu">
                 <ul>
-                    <li><a href="index.html"><span class="active"><i class="fa fa-home" aria-hidden="true"></i>Home</span></a></li>
-                    <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
+                    <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                    <li><a href="about.html"><span class="active"><i class="fa fa-user" aria-hidden="true"></i>About</span></a></li>
                     <li><a href="resume.html"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</a></li>
                     <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
                     <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
@@ -58,8 +59,8 @@
 
                 <div class="sidebar-header-menu">
                     <ul>
-                        <li><a href="index.html"><span class="active"><i class="fa fa-home" aria-hidden="true"></i>Home</span></a></li>
-                        <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
+                        <li><a href="index.html"><i class="fa fa-home" aria-hidden="true"></i>Home</a></li>
+                        <li><a href="about.html"><span class="active"><i class="fa fa-user" aria-hidden="true"></i>About</span></a></li>
                         <li><a href="resume.html"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</a></li>
                         <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
                         <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
@@ -207,16 +208,102 @@
 
                                     <div class="main-name-bg">
 
-                                        <div class="main-name">
-                                            <h3 class="name">Krishna Prasad Gaihre</h3>
+                                        <div class="about-main-name">
+                                            <h3 class="name">About Me</h3>
                                         </div>
 
                                     </div>
 
-                                    <div class="inner-container">
-                                        <img src="images/profile-img.JPG" alt="Container Image" class="container-img">
+                                    <div class="about-inner-container">
+
+                                        <div class="about-back-col">
+                                            <div class="about-me">
+                                                <h2><span>About </span>&nbsp; Me</h2>
+                                                <hr class="about-hr">
+                                                <p class="p1">HELLO!</p>
+                                                <p class="p2">Its me Krishna Prasad Gaihre, a student, a designer and a person having broad mind.
+                                                    I am studying bachelor of science in Computer Science and Information Technology at Patan Multiple Campus
+                                                    seeking for the opportunity to learn. Being a student of Technology I always look forward to learn about 
+                                                    any device that i can access to. i have a big interest in designing, coding and reading the books. 
+                                                    Now a days, I am focusing mainly on responsive webdesign typography.
+                                                </p>
+                                            </div>
+                                        </div>
+
+                                        <div class="personal">
+
+                                            <h2><span>Personal</span>&nbsp;Info</h2>
+                                            <hr class="about-hr">  
+
+                                            <div class="personal-info">
+                                                <p><span class="age">Age :</span> 20 </p>
+                                                <p><span class="nationality">Nationality :</span> Nepali </p>
+                                                <p><span class="dob">Date Of Birth :</span> August 21, 2000 </p>
+                                                <p><span class="address">Address :</span> Walling, Syangja </p>
+                                                <p><span class="email">Email :</span> krrishgaihre@gmail.com </p>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="what-i-do">
+
+                                            <h2><span>What</span>&nbsp;I Do</h2>
+                                            <hr class="about-hr">
+
+                                           <div class="i-do1">
+                                                <i class="fa fa-desktop" aria-hidden="true"></i>
+                                                <h3>Web Design</h3>
+                                            </div>
+
+                                            <div class="i-do2">
+                                                <h3>Web Development</h3>
+                                                <i class="fa fa-laptop" aria-hidden="true"></i>
+                                            </div>
+
+                                            <div class="i-do1">
+                                                <i class="fa fa-address-card" aria-hidden="true"></i>
+                                                <h3>Graphic Design</h3>
+                                            </div>
+
+                                            <div class="i-do3">
+                                                <h3>Programming</h3>
+                                                <i class="fa fa-code" aria-hidden="true"></i>
+                                            </div>
+
+                                        </div>
+
+                                        <div class="fun-fact">
+
+                                            <h2><span>Fun</span>&nbsp;Facts</h2>
+                                            <hr class="about-hr">
+
+                                            <div class="grid-container">
+                                                <div class="happy-client">
+                                                    <i class="fa fa-heart-o fun-icon" aria-hidden="true"></i>
+                                                    <h6 class="fun-head">Happy Clients</h6>
+                                                    <p class="fun-text">30</p>
+                                                </div>
+                                                <div class="project">
+                                                    <i class="fa fa-file-code-o fun-icon" aria-hidden="true"></i>
+                                                    <h6 class="fun-head">Projects</h6>
+                                                    <p class="fun-text">10</p>
+                                                </div>
+                                                <div class="award-won">
+                                                    <i class="fa fa-star-o fun-icon" aria-hidden="true"></i>
+                                                    <h6 class="fun-head">Awards</h6>
+                                                    <p class="fun-text">5</p>
+                                                </div>  
+                                                <div class="working-hour">
+                                                    <i class="fa fa-clock-o fun-icon" aria-hidden="true"></i>
+                                                    <h6 class="fun-head">Working Hour</h6>
+                                                    <p class="fun-text">2950</p>
+                                                </div>  
+                                            </div>
+
+                                        </div>
+
                                     </div>
-                                    
+
                                 </div>
 
                             </div>
