--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
                     <li><a href="resume.html"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</a></li>
                     <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
-                    <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
+                    <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
                 </ul>
             </div>
 
@@ -41,7 +41,7 @@
                     <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
                     <li><a href="resume.html"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</a></li>
                     <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
-                    <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
+                    <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
                 </ul>
 
                 <div class="logo2">
@@ -62,7 +62,7 @@
                         <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
                         <li><a href="resume.html"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</a></li>
                         <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
-                        <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
+                        <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
                     </ul>
                 </div>
 
