--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
                     <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
                     <li><a href="resume.html"><span class="active"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a></li>
                     <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
-                    <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
+                    <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
                 </ul>
             </div>
 
@@ -42,7 +42,7 @@
                     <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
                     <li><a href="resume.html"><span class="active"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a></li>
                     <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
-                    <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
+                    <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
                 </ul>
 
                 <div class="logo2">
@@ -63,7 +63,7 @@
                         <li><a href="about.html"><i class="fa fa-user" aria-hidden="true"></i>About</a></li>
                         <li><a href="resume.html"><span class="active"><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a></li>
                         <li><a href="portfolio.html"><i class="fa fa-briefcase" aria-hidden="true"></i>Portfolio</a></li>
-                        <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
+                        <li><a href="contact.html"><i class="fa fa-phone" aria-hidden="true"></i>Contact</a></li>
                     </ul>
                 </div>
 
