--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
                             <hr class="card-hr">
                             <p class="profile-quote">The Future Belongs To The Competent. Get Good, Get Better, Be The Best!</p>
                             
-                            <div class="arrow-right">
+                            <!--<div class="arrow-right">
                                 <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
                             </div>
 
                             <div class="arrow-down">
                                 <span><i class="fa fa-arrow-down" aria-hidden="true"></i></span>
-                            </div>
+                            </div>-->
 
                         </div>
 
@@ -187,13 +187,13 @@
                                                 <hr class="card-hr">
                                                 <p class="profile-quote">The Future Belongs To The Competent. Get Good, Get Better, Be The Best!</p>
                                                 
-                                                <div class="arrow-right">
+                                                <!--<div class="arrow-right">
                                                     <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
                                                 </div>
 
                                                 <div class="arrow-down">
                                                     <span><i class="fa fa-arrow-down" aria-hidden="true"></i></span>
-                                                </div>
+                                                </div>-->
 
                                             </div>
 
