--- a/portfolio.html
+++ b/portfolio.html
@@ -93,13 +93,13 @@
                             <hr class="card-hr">
                             <p class="profile-quote">The Future Belongs To The Competent. Get Good, Get Better, Be The Best!</p>
                             
-                            <div class="arrow-right">
+                            <!--<div class="arrow-right">
                                 <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
                             </div>
 
                             <div class="arrow-down">
                                 <span><i class="fa fa-arrow-down" aria-hidden="true"></i></span>
-                            </div>
+                            </div>-->
 
                         </div>
 
@@ -188,13 +188,13 @@
                                                 <hr class="card-hr">
                                                 <p class="profile-quote">The Future Belongs To The Competent. Get Good, Get Better, Be The Best!</p>
                                                 
-                                                <div class="arrow-right">
+                                                <!--<div class="arrow-right">
                                                     <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
                                                 </div>
 
                                                 <div class="arrow-down">
                                                     <span><i class="fa fa-arrow-down" aria-hidden="true"></i></span>
-                                                </div>
+                                                </div>-->
 
                                             </div>
 
@@ -406,13 +406,13 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
-    <script src="JS/main.js"></script>
+    <script src="./JS/main.js"></script>
 
     <!-- jQuery -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/jquery.filterizr.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./JS/jquery-3.3.1.min.js"></script>
+	<script src="./JS/popper.min.js"></script>
+	<script src="./JS/jquery.filterizr.min.js"></script>
+    <script src="./JS/script.js"></script>
 
 </body>
 </html>
