--- a/contact.html
+++ b/contact.html
@@ -236,7 +236,7 @@
                                             <span class="circle one"></span>
                                             <span class="circle two"></span>
                                   
-                                            <form action="index.html" autocomplete="off">
+                                            <form method="POST" action="./php/contact-form-handler.php" autocomplete="off">
                                               <h3 class="title">Leave a Message</h3>
                                               <div class="input-container">
                                                 <input type="name" name="name" class="input" required/>
