--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Krishna Prasad Gaihre</title>
+    <link rel="shortcut icon" href="./images/profile-img.jpg">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/resume.css">
     <link rel="stylesheet" type="text/css" href="css/responsive(960).css">
@@ -429,7 +430,7 @@
                                                     </div>
 
                                                     <div class="skills">
-                                                        <span class="name">Video</span>
+                                                        <span class="name">V. Editing</span>
                                                         <div class="percent">
                                                             <div class="progress" style="width: 60%;"></div>
                                                         </div>
