--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Krishna Prasad Gaihre</title>
+    <link rel="shortcut icon" href="./images/profile-img.jpg">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/contact.css">
     <link rel="stylesheet" type="text/css" href="css/responsive(960).css">
@@ -229,7 +230,7 @@
                                                 <a href="mailto:krrishgaihre@gmail.com"><i class="fa fa-envelope-o contact-icon" aria-hidden="true"></i></a>
                                                 <a href="mailto:krrishgaihre@gmail.com"><h6 class="grid-text">krrishgaihre@gmail.com</h6></a>
                                             </div>  
-                                            <div id="map"> </div>  
+                                            <div id="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56370.2382079762!2d83.73362939695689!3d27.989616257829653!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3995c54b85798d13%3A0x4720664fba067678!2sWaling%2033801!5e0!3m2!1sen!2snp!4v1598870479941!5m2!1sen!2snp" width="100%" height="120px" frameborder="0" style="border:0; border-radius: 10px;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> </div>  
                                         </div>
 
                                         <div class="contact-form">
@@ -284,8 +285,8 @@
 
     <script src="JS/main.js"></script>
     
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvoEW3eTUMMRr6o1ClreRPhuB3qB3t-0c&callback=initMap"
-  type="text/javascript"></script>
+    <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvoEW3eTUMMRr6o1ClreRPhuB3qB3t-0c&callback=initMap"
+  type="text/javascript"></script>-->
 
 </body>
 </html>
