--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Krishna Prasad Gaihre</title>
+    <link rel="shortcut icon" href="./images/profile-img.jpg">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/responsive(960).css">
     <link rel="stylesheet" type="text/css" href="css/responsive(768).css">
