--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
 
                                         <div class="bg-image" style="background-image:url('images/parallax.jpg'); background-size: cover;">
                                             <div class="my-profile">
-                                                <img src="images/profile-img.JPG" alt="Profile image" class="profile-img">
+                                                <div class="profile-image-cover">
+                                                    <img src="images/profile-img.JPG" alt="Profile image" class="profile-img">
+                                                </div>
                                                 <h2 class="my-name">Krishna Prasad Gaihre</h2>
                                                 <p class="umy-name">Student - B.Sc. CSIT</p>
 
