--- a/index.html
+++ b/index.html
@@ -243,6 +243,56 @@
 
                     <div class="inner-container">
                         <img src="images/profile-img.JPG" alt="Container Image" class="container-img">
+                        <div class="profile-card1">
+
+                            <div class="bg-image"
+                                style="background-image:url('images/parallax.jpg'); background-size: cover;">
+                                <div class="my-profile">
+                                    <div class="profile-image-cover">
+                                        <img src="images/profile-img.jpg" alt="Profile image" class="profile-img">
+                                    </div>
+                                    <h2 class="my-name">Krishna Prasad Gaihre</h2>
+                                    <p class="umy-name">Student - B.Sc. CSIT</p>
+
+                                    <div class="social-menu">
+
+                                        <ul>
+                                            <li><a href="https://www.facebook.com/gaihre.krishna.73/" target="blank"
+                                                    title="Facebook"><i class="fa fa-facebook"
+                                                        aria-hidden="true"></i></a>
+                                            </li>
+                                            <li><a href="https://twitter.com/Krishna58988134" target="blank"
+                                                    title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                                            </li>
+                                            <li><a href="https://www.linkedin.com/in/krishna-prasad-gaihre-43977b1a9/"
+                                                    target="blank" title="Linkedin"><i class="fa fa-linkedin"
+                                                        aria-hidden="true"></i></a></li>
+                                            <li><a href="https://www.instagram.com/krrishgaihre/" target="blank"
+                                                    title="Instagram"><i class="fa fa-instagram"
+                                                        aria-hidden="true"></i></a>
+                                            </li>
+                                        </ul>
+
+                                    </div>
+
+                                    <hr class="card-hr">
+                                    <p class="profile-quote">The Future Belongs To The Competent. Get Good, Get Better,
+                                        Be
+                                        The Best!</p>
+
+                                    <!--<div class="arrow-right">
+                                                        <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span>
+                                                    </div>
+    
+                                                    <div class="arrow-down">
+                                                        <span><i class="fa fa-arrow-down" aria-hidden="true"></i></span>
+                                                    </div>-->
+
+                                </div>
+
+                            </div>
+
+                        </div>
                     </div>
 
                 </div>
