Ready to Publish

--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
 
                     <div class="bg-image" style="background-image:url('images/parallax.jpg'); background-size: cover;">
                         <div class="my-profile">
-                            <img src="images/profile-img.JPG" alt="Profile image" class="profile-img">
+                            <img src="images/profile-img.jpg" alt="Profile image" class="profile-img">
                             <h2 class="my-name">Krishna Prasad Gaihre</h2>
                             <p class="umy-name">Student - B.Sc. CSIT</p>
 
