--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <div class="bg-image" style="background-image:url('images/parallax.jpg'); background-size: cover;">
                         <div class="my-profile">
-                            <img src="images/profile-img.JPG" alt="Profile image" class="profile-img">
+                            <img src="images/profile-img.jpg" alt="Profile image" class="profile-img">
                             <h2 class="my-name">Krishna Prasad Gaihre</h2>
                             <p class="umy-name">Student - B.Sc. CSIT</p>
 
@@ -242,7 +242,7 @@
                     </div>
 
                     <div class="inner-container">
-                        <img src="images/profile-img.JPG" alt="Container Image" class="container-img">
+                        <img src="images/profile-img.jpg" alt="Container Image" class="container-img">
                         <div class="profile-card1">
 
                             <div class="bg-image"
