Ready to publish

--- a/about.html
+++ b/about.html
@@ -234,7 +234,7 @@
 
                 <div class="container">
 
-                    <div class="main-name-bg">
+                    <div class="about-main-name-bg">
 
                         <div class="about-main-name">
                             <h3 class="name">About Me</h3>
