Ready to publish

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                     </div>
 
                     <div class="inner-container">
-                        <img src="images/profile-img.jpg" alt="Container Image" class="container-img">
+                        <img src="./images/profile-img.jpg" alt="Container Image" class="container-img">
                         <div class="profile-card1">
 
                             <div class="bg-image"
